started on bestdestinations

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span></span>
             </label>
 
-            <nav>
+            <nav class="add-shadow">
                 <ul>
                     <li><a href="bestdestinations.html">Best destinations</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
