--- a/bestdestinations.html
+++ b/bestdestinations.html
@@ -38,7 +38,70 @@
         </section>
 
         <section class="best-destinations">
-            <br><br><br>
+            <article class="article-one">
+                <h3>
+                    Netherlands
+                </h3>
+                <p>
+                    Hiking through the hills, camping with the kids, cycling through the woods, relaxing on the beach or extensive shopping. It's all possible during a holiday in the Netherlands. Our own country is incredibly versatile, as you will discover when you go on a cycling holiday in Nunspeet or go camping in Twente. Are you ready for real relaxation? Then come to Vlieland, where zen takes on a new meaning on the North Sea beach.
+                </p>
+            </article>
+            <article class="article-two">
+                <h3>
+                    Curaçao
+                </h3>
+                <p>
+                    On a vacation on Curaçao, the white beaches lined with palm trees are present in large numbers. A beach holiday on the Caribbean Sea meets several wishes here: from a bustling sun holiday on Mambo Beach and Jan Thiel Bay to rest in Westpunt. Be sure to visit the colorful Handelskade during your city trip in Willemstad or take an excursion to the beautiful Christoffel Park. Bon bini on dushi Curacao!
+                </p>
+            </article>
+            <article class="article-three">
+                <h3>
+                    Greece
+                </h3>
+                <p>
+                    You can arrange a holiday to Greece according to your own wishes at TUI. The sun is shining and the sea is always within reach in this southern European country. Choose one of the beautiful islands from this holiday. From Samos, Lesvos to Zakynthos, Greece is beautiful. But the capital Athens is also a real must-see with the Acropolis as one of the highlights. Visit Greece for a holiday full of sun!
+                </p>
+            </article>
+            <article class="article-four">
+                <h3>
+                    Spain
+                </h3>
+                <p>
+                    A long coastline spread over several Costas, temperamental cities such as Barcelona and Madrid, the classic Andalusia in southern Spain and delicious tapas: if you can experience 'la buena vida' anywhere, it is during a holiday in Spain. Due to its location on the Mediterranean Sea, this country in southwestern Europe has been a favorite place for a flight or car holiday to Spain for years. Visit Spain for a holiday full of sun!
+                </p>
+            </article>
+            <article class="article-five">
+                <h3>
+                    Aruba
+                </h3>
+                <p>
+                    Just looking for a vacation to Aruba will put a smile on your face! The pleasant tropical temperatures and white beaches with the unique divi divi trees form an idyllic backdrop for a sun holiday on the Caribbean Sea. Aruba is not called 'One Happy Island' for nothing. On a diving holiday in Aruba? Around the island you will find interesting coral formations and the largest shipwreck in the Caribbean. good bini!
+                </p>
+            </article>
+            <article class="article-six">
+                <h3>
+                    Portugal
+                </h3>
+                <p>
+                    With its colorful cities, green islands and sunny coasts, Portugal is a perfect country for a varied holiday. In this southern European country, every type of holidaymaker will have a great time. During a holiday in Portugal you can sunbathe on the capricious Algarve or walk in Madeira and the Azores. Culture lovers are in the right place during a city trip to Lisbon or Porto, both of which are full of historical monuments.
+                </p>
+            </article>
+
+            <section class="product product-one">
+                <a href="https://www.tui.nl/vliegtickets/services/zitcomfort/">
+                    <img src="assets/product-vip-seat.png" alt="">
+                </a>
+            </section>
+            <section class="product product-two">
+                <a href="https://www.tui.nl/vliegtickets/services/bagage/">
+                    <img src="assets/product-bagage.jpg" alt="">
+                </a>
+            </section>
+            <section class="product product-three">
+                <a href="https://www.tui.nl/vliegtickets/services/maaltijdreservering/">
+                    <img src="assets/product-maaltijd.jpg" alt="">
+                </a>
+            </section>
         </section>
 
         <footer class="grid-layout">
