--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             </h3>
                         </header>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus congue elementum urna sed ultrices. Donec ac venenatis massa, quis iaculis neque. Donec vel malesuada est. Sed pretium sem in nunc elementum, sed vehicula ligula ornare. Integer condimentum quis nisi id iaculis. Integer ultrices sem a augue condimentum, ac elementum massa elementum. Phasellus mattis ullamcorper nisl, eu viverra leo rutrum ac. Cras sollicitudin massa arcu, molestie laoreet est fringilla ut. Duis lacus est, sagittis a nunc a, egestas feugiat dolor. Donec.
+                            For days all about Spanish tapas, terraces, sun and beach... Doesn't sound wrong, does it? If you book a city trip to Barcelona, you can combine beach with city! One of the highlights is the Sagrada Familia. And then there's La Rambla: the city's most famous boulevard that you must see at least once. Every Saturday you can also enjoy a free bike tour through Barcelona accompanied by a Dutch guide.
                         </p>
                         <footer>
                             <a href="#">More information</a>
@@ -76,7 +76,7 @@
                             </h3>
                         </header>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eros orci, tempus eu enim eu, aliquam tincidunt orci. Sed quis dolor nec purus vestibulum lobortis placerat id nulla. Mauris bibendum neque eu mauris vestibulum, sit amet tincidunt nunc imperdiet. Nulla egestas sem ac eros dictum, eu tincidunt risus varius. In dictum ligula eu nisi tristique, quis ultrices dolor ullamcorper. Maecenas vitae ex turpis. Praesent quis purus lacus. Praesent non libero sed ex blandit luctus congue a lectus. Vestibulum pulvinar luctus. 
+                            New York, the city that never sleeps! This city in the United States bustles day and night and there is something to do on every street corner. The dizzying skyscrapers, Central Park and the Statue of Liberty are just a few examples of highlights in The Big Apple. During a city trip in New York, get on your bike and discover the Harlem district full of soul or plan a shopping session. You will find plenty of shops here!
                         </p>
                         <footer>
                             <a href="#">More information</a>
@@ -99,7 +99,7 @@
                             </h3>
                         </header>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquam, justo eu ornare rhoncus, eros velit placerat lacus, ut finibus nibh ante in mi. Vestibulum facilisis diam fermentum facilisis porta. Duis leo nibh, facilisis quis nisi sed, commodo placerat eros. Quisque sed est ac felis blandit posuere ultricies non nisi. Suspendisse libero lacus, blandit ac vehicula sit amet, pretium vel augue. Sed viverra vulputate diam vitae vestibulum. Fusce eu ante eu sem eleifend suscipit at nec leo. Curabitur et efficitur.
+                            The famous Colosseum, the Trevi Fountain and the Spanish Steps. This is just a small list of the sights you will encounter during your city trip in Rome. There is so much to see and so much to experience in this Italian city. During your weekend in Rome, don't forget to take regular breaks on one of the terraces on Piazza Navona. With a cappuccino and an Italian gelato of course!
                         </p>
                         <footer>
                             <a href="#">More information</a>
@@ -122,33 +122,33 @@
                 </h3>
                 <ol>
                     <li>
-                        <b>Bali</b>
+                        <b>Netherlands</b>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula.
+                            Walking or cycling? Come on holiday in the Netherlands.
                         </p>
                     </li>
                     <li>
-                        <b>New Orleans</b>
+                        <b>Curaçao</b>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed.
+                            Beautiful white beaches with clear waters! Visit Curaçao for sun.
                         </p>
                     </li>
                     <li>
-                        <b>Kerry</b>
+                        <b>Greece</b>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pretium.
+                            Sun and beautiful landscapes. Visit Greece for their awesome culture!
                         </p>
                     </li>
                     <li>
-                        <b>Marrakesh</b>
+                        <b>Spain</b>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed.
+                            If you want sun, Spain is the way to go!
                         </p>
                     </li>
                     <li>
-                        <b>Sydney</b>
+                        <b>Aruba</b>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis.
+                            One happy Island with a caribbean beaches.
                         </p>
                     </li>
                 </ol>
