--- a/tickets.html
+++ b/tickets.html
@@ -29,7 +29,7 @@
             <nav>
                 <ul>
                     <li><a href="bestdestinations.html">Best destinations</a></li>
-                    <li><a href="tickets.html">Tickets</a></li>
+                    <li><a href="tickets.html"><b>Tickets</b></a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
