Made changes so they match the guidelines.

--- a/bestdestinations.html
+++ b/bestdestinations.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Micha de Vries">
         <link rel="stylesheet" href="assets/style.css">
         <title>Tui - Best destinations</title>
     </head>
@@ -16,7 +17,7 @@
                 <aside class="grid-title">
                     <a href="index.html">
                         <h1>Tui</h1>
-                        <h2>Discover your smile</h2>
+                        <h2><em>Discover your smile</em></h2>
                     </a>
                 </aside>
             </header>
