--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Micha de Vries">
         <link rel="stylesheet" href="assets/style.css">
         <title>Tui - Discover your smile</title>
     </head>
@@ -15,7 +16,7 @@
                 </a>
                 <aside>
                     <h1>Tui</h1>
-                    <h2>Discover your smile</h2>
+                    <h2><em>Discover your smile</em></h2>
                 </aside>
             </header>
 
@@ -56,14 +57,14 @@
                             For days all about Spanish tapas, terraces, sun and beach... Doesn't sound wrong, does it? If you book a city trip to Barcelona, you can combine beach with city! One of the highlights is the Sagrada Familia. And then there's La Rambla: the city's most famous boulevard that you must see at least once. Every Saturday you can also enjoy a free bike tour through Barcelona accompanied by a Dutch guide.
                         </p>
                         <footer>
-                            <a href="#">More information</a>
+                            <a href="https://www.tui.nl/reizen/spanje/catalonie/costa-barcelona/costa-brava/barcelona/">More information</a>
                         </footer>
                     </section>
                     <section class="image-container">
                         <p class="image-copyright">
                             &copy; 2021 Tui
                         </p>
-                        <a href="#">
+                        <a href="https://www.tui.nl/reizen/spanje/catalonie/costa-barcelona/costa-brava/barcelona/">
                             <img src="assets/barcelona.jpeg" alt="">
                         </a>
                     </section>
@@ -79,14 +80,14 @@
                             New York, the city that never sleeps! This city in the United States bustles day and night and there is something to do on every street corner. The dizzying skyscrapers, Central Park and the Statue of Liberty are just a few examples of highlights in The Big Apple. During a city trip in New York, get on your bike and discover the Harlem district full of soul or plan a shopping session. You will find plenty of shops here!
                         </p>
                         <footer>
-                            <a href="#">More information</a>
+                            <a href="https://www.tui.nl/reizen/verenigde-staten/new-york/new-york/">More information</a>
                         </footer>
                     </section>
                     <section class="image-container">
                         <p class="image-copyright">
                             &copy; 2021 Tui
                         </p>
-                        <a href="#">
+                        <a href="https://www.tui.nl/reizen/verenigde-staten/new-york/new-york/">
                             <img src="assets/new-york.jpg" alt="">
                         </a>
                     </section>
@@ -102,14 +103,14 @@
                             The famous Colosseum, the Trevi Fountain and the Spanish Steps. This is just a small list of the sights you will encounter during your city trip in Rome. There is so much to see and so much to experience in this Italian city. During your weekend in Rome, don't forget to take regular breaks on one of the terraces on Piazza Navona. With a cappuccino and an Italian gelato of course!
                         </p>
                         <footer>
-                            <a href="#">More information</a>
+                            <a href="https://www.tui.nl/reizen/italie/lazio/rome/">More information</a>
                         </footer>
                     </section>
                     <section class="image-container">
                         <p class="image-copyright">
                             &copy; 2021 Tui
                         </p>
-                        <a href="#">
+                        <a href="https://www.tui.nl/reizen/italie/lazio/rome/">
                             <img src="assets/rome.jpg" alt="">
                         </a>
                     </section>
